# picongpuanalysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: README.md  shadowgraphy.ipynb
src/loading/: openpmd.py
src/picongpuanalysis/: __init__.py
src/picongpuanalysis/loading/: __init__.py  base_openpmd.py  openpmd.py  shadowgraphy.py  shadowgraphy_fourier.py
src/picongpuanalysis/plotting/: __init__.py  fields.py
src/picongpuanalysis/postprocessing/: __init__.py  shadowgraphy.py
src/picongpuanalysis/utils/: __init__.py  maths.py  units.py
